create method login for admin, create new verifiy token for admin, end update documentation
