# sdciwaregu-api-spec.yml
@@ -6,7 +6,7 @@ info:
   version: 1.0.0-oas3
   license:
     name: SD Ciwaregu license
-    url: "http://34.128.126.228:8000/"
+    url: "http://34.128.103.61:8000/"
 
 tags:
   - name: Authentication
@@ -23,7 +23,8 @@ tags:
     description: ""
   - name: PPDB
     description: ""
-  
+  - name: Users
+    description: ""
 
 paths:
   #endpoint register
@@ -77,6 +78,33 @@ paths:
         500:
           $ref: '#/components/responses/serverError'
   
+  # profile
+  /v1/profile/{userId}:
+    get:
+      tags:
+        - Users
+      summary: "Endpoint while user go to profile page"
+      responses:
+        200:
+          $ref: '#/components/responses/getProfileResponse'
+        400:
+          $ref: '#/components/responses/clientError'
+        500:
+          $ref: '#/components/responses/serverError'
+    put:
+      tags:
+        - Users
+      summary: "Endpoint while user edit profile page"
+      requestBody:
+        required: true
+        $ref: '#/components/requestBodies/profilePutRequestBody'
+      responses:
+        200:
+          $ref: '#/components/responses/updateProfileResponse'
+        400:
+          $ref: '#/components/responses/clientError'
+        500:
+          $ref: '#/components/responses/serverError'
   
   #endpoint get galleries and create galleries
   /v1/galleries:
@@ -116,7 +144,7 @@ paths:
           name: id
           required: true
           schema: 
-            type: integer
+            type: string
             minimum: 1
           description: gallery id
       requestBody:
@@ -139,7 +167,7 @@ paths:
           name: id
           required: true
           schema: 
-            type: integer
+            type: string
             minimum: 1
           description: gallery id
       requestBody:
@@ -162,7 +190,7 @@ paths:
           name: id
           required: true
           schema: 
-            type: integer
+            type: string
             minimum: 1
           description: gallery id
       requestBody:
@@ -227,7 +255,7 @@ paths:
           name: id
           required: true
           schema: 
-            type: integer
+            type: string
             minimum: 1
           description: programs id
       requestBody:
@@ -250,7 +278,7 @@ paths:
           name: id
           required: true
           schema: 
-            type: integer
+            type: string
             minimum: 1
           description: programs id
       responses:
@@ -270,7 +298,7 @@ paths:
           name: id
           required: true
           schema: 
-            type: integer
+            type: string
             minimum: 1
           description: programs id
       responses:
@@ -304,6 +332,68 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/getAllTeachersResponse'
+        400:
+          $ref: '#/components/responses/clientError'
+        500:
+          $ref: '#/components/responses/serverError'
+
+  /v1/teachers/{teacherId}:
+    put:
+      tags:
+        - Teachers
+      summary: "endpoint to update existing teacher"
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema: 
+            type: string
+            minimum: 1
+          description: teacher id
+      requestBody:
+        required: true
+        $ref: '#/components/requestBodies/teacherPostRequestBody'
+      responses:
+        200:
+          $ref: '#/components/responses/putTeacherResponse'
+        400:
+          $ref: '#/components/responses/clientError'
+        500:
+          $ref: '#/components/responses/serverError'
+    delete:
+      tags:
+        - Teachers
+      summary: "Endpoint while admin want to delete teachers by id"
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema: 
+            type: string
+            minimum: 1
+          description: teachers id
+      responses:
+        200:
+          $ref: '#/components/responses/deleteTeachersResponse'
+        400:
+          $ref: '#/components/responses/clientError'
+        500:
+          $ref: '#/components/responses/serverError'
+    get:
+      tags:
+        - Teachers
+      summary: "Endpoint while admin want to get teachers by id"
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema: 
+            type: string
+            minimum: 1
+          description: teachers id
+      responses:
+        200:
+          $ref: '#/components/responses/getTeachersByIdResponse'
         400:
           $ref: '#/components/responses/clientError'
         500:
@@ -394,13 +484,6 @@ components:
         email:
           type: string
           description: "email registered user"
-        password:
-          type: string
-          description: "password registered user"
-      example:
-        message: "Method Success"
-        email : "asdghjk@gmail.com"
-        password: "asdfghjk"
     
     # Server Rrror schema 
     serverErrorSchema:
@@ -469,7 +552,6 @@ components:
             data:
               name: "username"
               email : "asdghjk@gmail.com"
-              password: "asdfghjk"
 
     # schema for user login        
     loginResponseSchema:
@@ -484,10 +566,9 @@ components:
             - data
           example:
             data:
-              object: "authentication_token"
               user_id: "1"
+              role: "Users"
               email: "asdfgh45@gmail.com"
-              roles: "Student"
               authentication_token: "azJRj09l7jvR8KhTqUs3"
     
     logoutResponseSchema:
@@ -574,21 +655,6 @@ components:
       allOf:
         - $ref: '#/components/schemas/baseResponseNoDataSchema'
 
-    postTeachersResponseSchema:
-      allOf:
-        - $ref: '#/components/schemas/baseResponseSchema'
-        - type: object
-          properties:
-            data:
-              type: object
-              $ref: '#/components/schemas/postTeachersSchema'
-          example:
-            data:
-              teachersId: "jajsd-kjdk-aosdol"
-              name: "John Doe"
-              imageUrl: "https://image.io/9229"
-              position: "Headschool"
-
     #Get Stats School response Schema
     getStatsResponseSchema:
       allOf:
@@ -605,6 +671,22 @@ components:
               programCount: 10
               awardCount: 100
     
+    postTeachersResponseSchema:
+      allOf:
+        - $ref: '#/components/schemas/baseResponseSchema'
+        - type: object
+          properties:
+            data:
+              type: object
+              $ref: '#/components/schemas/postTeachersSchema'
+          example:
+            data:
+              teachersId: "jajsd-kjdk-aosdol"
+              name: "John Doe"
+              email: "john@gmail.com"
+              jenisPtk: "Headschool"
+              imageUrl: "https://image.io/9229"
+    
     #Get all teachers response schema
     getTeachersResponseSchema:
       allOf:
@@ -617,17 +699,58 @@ components:
           example:
             data:
               - id: "nana022asd-kmaskmd-00w0-oksakd"
-                name: "upacara"
-                imageUrl: "https://example.com/ayi.jpg"
-                position: "Kepala Sekolah"
-                createdAt: "2023-05-09T02:52:55.351Z"
-                updatedAt: "2023-05-09T02:52:55.356Z"
-              - id: "nana020asd-kmaskmd-00w0-oksakd"
-                name: "Ayi Solihah"
-                imageUrl: "https://example.com/ayi-sol.jpg"
-                position: "Guru Kelas"
-                createdAt: "2023-05-09T02:54:11.636Z"
-                updatedAt: "2023-05-09T02:54:11.640Z"
+                jenisPTK: "Kepala Sekolah"
+                teachersDetail: {
+                  name: "ayi",
+                  email: "ayi@gmail.com",
+                  imageUrl: "https://example.com/ayi.jpg",
+                }
+              - id: "nana022asd-kmaskmd-00w0-oksakd"
+                jenisPTK: "Wali Kelas"
+                teachersDetail: {
+                  name: "dadang",
+                  email: "dadang@gmail.com",
+                  imageUrl: "https://example.com/dadang.jpg",
+                }
+
+    putTeachersResponseSchema:
+      allOf:
+        - $ref: '#/components/schemas/baseResponseSchema'
+        - type: object
+          properties:
+            data:
+              type: object
+              $ref: '#/components/schemas/postTeachersSchema'
+          example:
+            data:
+              teachersId: "jajsd-kjdk-aosdol"
+              name: "John Doe"
+              email: "john@gmail.com"
+              jenisPtk: "Headschool"
+              imageUrl: "https://image.io/9229"
+    
+    deleteTeachersResponseSchema:
+      allOf:
+        - $ref: '#/components/schemas/baseResponseNoDataSchema'
+
+    getTeachersByIdResponseSchema:
+      allOf:
+        - $ref: '#/components/schemas/baseResponseSchema'
+        - type: object
+          properties:
+            data:
+              type: object
+              $ref: '#/components/schemas/teachersSchema'
+          example:
+            data:
+              id: "nana022asd-kmaskmd-00w0-oksakd"
+              jenisPTK: "Kepala Sekolah"
+              teachersDetail: {
+                name: "ayi",
+                email: "ayi@gmail.com",
+                imageUrl: "https://example.com/ayi.jpg",
+              }
+
     
     #Programs Response Schema start
     getProgramsResponseSchema:
@@ -673,6 +796,27 @@ components:
       allOf:
         - $ref: '#/components/schemas/baseResponseNoDataSchema'
     #Programs Response Schema End
+
+    getProfileResponseSchema:
+      allOf:
+        - $ref: '#/components/schemas/baseResponseSchema'
+        - type: object
+          properties:
+            data:
+              type: object
+              $ref: '#/components/schemas/profileSchema'
+          example:
+            data:
+              id: "nana020asd-kmaskmd-00w0-oksakd"
+              name: "Ayi Solihah"
+              email: "ayi@gmail.com"
+              imageUrl: "https://example.com/ayi-sol.jpg"
+              birthDate: null
+              address: Cianjur
+
+    updateProfileResponseSchema:
+      allOf:
+        - $ref: '#/components/schemas/baseResponseNoDataSchema'
 
     #PPDB Response Schema start
     postPpdbResponseSchema:
@@ -734,9 +878,6 @@ components:
                   candidateId: null
               }
               wali: null
-
-
-    
     #PPDB Response Schema end
 
     # schema for authentication data while user login
@@ -775,9 +916,26 @@ components:
           type: string
         name: 
           type: string
+        jenisPTK: 
+          type: string
         imageUrl: 
           type: string
-        position: 
+        
+    
+    profileSchema:
+      type: object
+      properties:
+        userId: 
+          type: string
+        name: 
+          type: string
+        email:
+          type: string
+        imageUrl: 
+          type: string
+        address: 
+          type: string
+        birthDate:
           type: string
     
     #Schema for stats response
@@ -796,18 +954,19 @@ components:
     teachersSchema:
       type: object
       properties:
-        user_id:
+        id:
           type: string
-        name:
+        jenisPTK:
           type: string
-        imageUrl: 
-          type: string
-        position:
-          type: string
-        createdAt:
-          type: string
-        updateAt:
-          type: string
+        teachersDetail:
+          type: object
+          properties:
+            name:
+              type: string
+            email: 
+              type: string
+            imageUrl: 
+              type: string
     
     #Schema for programs response
     programsSchema:
@@ -972,10 +1131,14 @@ components:
               password:
                 type: string
                 description: password user
+              confirmPassword:
+                type: string
+                description: confirmation password
             example:
               name: "user"
               email: "asdfgh45@gmail.com"
               password: "Testes123"
+              confirmPassword: "Testes123"
 
     #request body for login
     loginRequestBody:
@@ -1035,13 +1198,56 @@ components:
               name:
                 type: string
                 description: teacher name
+              email:
+                type: string
+                description: teacher name
+                nullable: true
               imageUrl:
                 type: string
                 description: image link
-              posititon:
+                nullable: true
+              jenisPTK:
                 type: string
                 description: teache position
-    
+            required:
+              - name
+              - jenisPtk
+      
+    profilePutRequestBody:
+      content:
+        application/x-www-form-urlencoded:
+          schema:
+            properties:
+              name:
+                type: string
+                description: user
+              email:
+                type: string
+                description: user email
+              address:
+                type: string
+                description: adress user
+                nullable: true
+              imageUrl:
+                type: string
+                description: image link
+                nullable: true
+              password:
+                type: string
+                description: password
+                nullable: true
+              confirmPass:
+                type: string
+                description: confirmation password
+                nullable: true
+              birthDate:
+                type: string
+                description: birthday user
+                nullable: true
+            required:
+              - name
+              - email
+
     ppdbPostRequestBody:
       required: true
       content:
@@ -1166,7 +1372,6 @@ components:
                   url:
                     type: string
                     description: URL of the document
-
 
   #Responses Components
   responses:
@@ -1307,6 +1512,28 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/postTeachersResponseSchema'
+    
+    putTeacherResponse:
+      description: update existing teacher response
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/putTeachersResponseSchema"
+    
+    deleteTeachersResponse:
+      description: user want to delete teacher
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/deleteTeachersResponseSchema'
+    
+    getTeachersByIdResponse:
+      description: user want to get teacher by id
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/getTeachersByIdResponseSchema'
+
 
     postPpdbResponse:
       description: Post new ppdb for new student response
@@ -1314,3 +1541,17 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/postPpdbResponseSchema'
+    
+    getProfileResponse:
+      description: get users profile response
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/getProfileResponseSchema'
+
+    updateProfileResponse:
+      description: get users profile response
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/updateProfileResponseSchema'
